display author username on comment and post
